fixed loader alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -556,6 +556,7 @@ sm-copy {
   text-align: center;
   sm-spinner {
     margin-bottom: 1.5rem;
+    justify-self: center;
   }
 }
 
